# darklightd

./: Cargo.toml  README.md  deny.toml
.github/workflows/: release.yml  test.yml
src/: backend.rs  main.rs  monitor.rs  portal.rs  xdg.rs
src/backend/: gtk.rs  helix.rs  types.rs
supply-chain/: audits.toml  config.toml
systemd/: darklightd.service  lightdarkd.service
