[package]
name = "darklightd"
description = "Update light and dark appearances according to desktop settings"
readme = "README.md"
homepage = "https://github.com/swsnr/darklightd"
repository = "https://github.com/swsnr/darklightd"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
rust-version = "1.81"
edition = "2021"
publish = false

[dependencies]

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-prefix = ""
tag-message = "Version {{tag_name}}"
publish = false
verify = false
push = false
