[package]
name = "darklightd"
description = "Update light and dark appearances according to desktop settings"
readme = "README.md"
homepage = "https://github.com/swsnr/darklightd"
repository = "https://github.com/swsnr/darklightd"
version = "0.1.1"
license = "MPL-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
rust-version = "1.81"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.43.0", features = ["rt", "macros", "signal", "process"] }
tokio-stream = { version = "0.1.17", features = ["sync", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "std",
    "ansi",
    "registry",
] }
logcontrol-tracing = "0.2.0"
logcontrol-zbus = "3.0.0"
zbus = { version = "5.3.0", default-features = false, features = ["tokio"] }
futures = "0.3.20"
fastrand = "2.3.0"
rustix = { version = "0.38.44", features = ["fs", "process"] }

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-prefix = ""
tag-message = "Version {{tag_name}}"
publish = false
verify = false
push = false
